finalized blog, fixed nav bar again via overflow on the blog page

--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -1,12 +1,22 @@
 .container-blog {
-  height: 80%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.overflow {
+  height: 80%;
+  overflow: auto;
+}
+
 #blog {
+  margin: 10px 0px;
   width: 75%;
   border: 2px black solid;
   padding: 10px;
+}
+
+#blog img {
+  /* float: right; */
 }
